# slint_demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  compile_flags.txt  main.cpp  my_application  my_application_ui.h  my_application_ui.slint
